2003-07-17  Dominique Devriese  <devriese@kde.org>

	* fix the "conversion from const char* to char*" problem in
	python_scripter.cc.  This introduces a small, harmless memory leak
	because of how the python libs work..

2003-07-16  Dominique Devriese  <devriese@kde.org>

	* add documentation about installing the python dev libs to
	configure.in.bot

	* adapt some infrastructure regarding text labels to be able to
	work with labels that get their location from an invisible Point
	object.  This will ease the adding of support for attached text
	labels..

2003-07-12  Dominique Devriese  <devriese@kde.org>

	* prevent a crash when kig cannot find its library.  It now just
	complains and exits properly.

2003-07-03  Dominique Devriese  <devriese@kde.org>

	* add Python scripting support.  Rather large addition, involving
	a lot of autoconf and automake magic..

	* make snapToGrid work for PolarCoordinateSystem

	* make shift -> snap to grid work in PointConstructionMode and
	normal Construction Mode too..

	* add the concept of cache objects, which cannot be stored, in
	order to support a python compiled script ObjectImp..

2003-07-02  Dominique Devriese  <devriese@kde.org>

	* sanitize the ObjectImp inherits() system.  It now uses static
	objects instead of enum values, this also eliminates some ugly
	functions in ObjectImp, and allows for more flexible addition of
	new ObjectImp types..

	* fix a memory leak in KigDocument, which did not delete its
	KCommandHistory..

	* fix some use of uninitialised value in dragrectmode, which
	caused the dragrect to not work at random times

	* fix the clearing of the selection when the user clicks on an
	empty point..

2003-06-27  Dominique Devriese  <devriese@kde.org>

	* implement helpSlot() in ManageTypesDialog..

	* add a "Set Coordinate System" menu to the Settings menu..

	* make shift snap to grid in moving mode, and rework the moving
	API to something a bit saner in the process..
